@@ -32,7 +32,7 @@ use lib qw(lib);
         ::isa_ok( $self, __PACKAGE__ );
         ::is( $job->name, 'Foo',     '$job->name ' . $job->name );
         ::is( $job->ID,   1,         '$job->ID '   . $job->ID   );
-        ::cmp_ok( $job->PID, '>', 0, '$job->PID '  . $job->PID  );
+        ::cmp_ok( $job->PID, ($^O eq 'MSWin32' ? '<' : '>'), 0, '$job->PID '  . $job->PID  );
         ::is( $self->num_workers, 0, 'num_workers == 0' );
         ::ok( (not $self->has_workers), 'has_workers is false' );
     }
